apps/monitoring/templates/grafana-microgateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-microgateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
    - http:
        paths:
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: grafana-microgateway
                port:
                  number: 443
